--- a/.github/workflows/main_deepfake.yml
+++ b/.github/workflows/main_deepfake.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -51,6 +53,7 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -65,9 +68,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4F72599935E647D0939BD7601D2855CB }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AE694A80922543CB9F2B92FA6D016B33 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9EEBF644209947E69E6A7CB2B22FC08A }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F7DDD3786C3F487F9EFE6B558A6B7AE2 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_66958DA9A76C4815B7E7CFEAB51CB21D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6A1055E40DEB4EAA9E080DBACE9D14E6 }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
